@@ -51,6 +51,7 @@ Mantis
  * Fixed defects with updating project categories and versions.
  * Removed most file variables from default/config_inc2.php.
  * Added support for auto-assigning of bugs when a default user is specified for the category and if bug is not pre-assigned.
+ * Added links from the counters of bugs reported and assigned to logged in user to their corresponding filtered view.
 
 2002.05.19  -  0.17.3
 
